# mk_krml_studentid

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/my_krml_studentid/: __init__.py
src/my_krml_studentid/data/: sets.py
src/my_krml_studentid/models/: null.py  performance.py
tests/: test_my_krml_studentid.py
tests/data/: test_sets.py
