[tool.poetry]
name = "my_krml_studentid"
version = "0.1.6"
description = "my first pyhton package"
authors = ["student"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.0.1"
scikit-learn = "1.2.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
