[tool.poetry]
name = "my_krml_studentid"
version = "0.1.6"
description = "my first pyhton package"
authors = ["student"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.2.2"
scikit-learn = "1.5.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
jupyterlab = "4.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
